<resources>
    <string name="app_name">艺科</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="msg">消息</string>
    <string name="ordermanagement">我的发单</string>
    <string name="my">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zhaogongren">找工人</string>
    <string name="zhaogongzuo">找工作</string>
    <string name="jiancaidaojia">建材到家</string>
    <string name="gongsi">公司</string>
    <string name="kaishi">开始</string>
    <string name="quxiao">取消</string>
    <string name="xiadan">下单</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="xinxiguanli">信息管理</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="zuixingonggao">最新公告</string>
    <string name="tousujianyi">投诉建议</string>
    <string name="pingfenshuoming">评分说明</string>
    <string name="fuwuxieyi">服务协议</string>
    <string name="pingtaijiangcheng">平台奖惩</string>
    <string name="xuxiyuandi">学习园地</string>
    <string name="lianxikefu">联系客服</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="wodedingdan">我的接单</string>
    <string name="haoyou">好友</string>
    <string name="ganxiang">感想</string>
    <string name="jiazaishibai">加载失败......</string>
    <string name="meiyourenheshuju">没有任何数据......</string>
    <string name="meiyouwangluo">没有网络了亲</string>
    <string name="chaoshil">亲，超时了......</string>
    <string name="chongxindenglu">重新登陆</string>
    <string name="jiazaizhong">加载中......</string>
    <string name="woyelaipinglun">我也来评论</string>
    <string name="ok">确定</string>
    <string name="qingshuruninyaopinglun">请输入您要评论回复的内容</string>
    <string name="ninmeiyourenheshuru">您没有任何输入</string>
    <string name="shiyongshijian">选择时间</string>
    <string name="dianjixuanze">点击选择</string>
    <string name="shigongdizhi">请选择施工地址</string>
    <string name="shiyongrenshu">请输入需要的人数</string>
    <string name="ewaifuwu">额外/风格-服务</string>
    <string name="geishifuliuyan">给师傅留言</string>
    <string name="zuizhongfeiyong">最终费用以工程报表为准...</string>
    <string name="wotongyi">我同意并已阅读</string>
    <string name="xieyi">《艺科协议》</string>
    <string name="zhuangxiugongren">装修工人</string>
    <string name="wanshandingdan">完善订单</string>
    <string name="qingdan">抢单</string>
    <string name="jiahaoyou">加好友</string>
    <string name="fuwumingcheng">服务名称</string>
    <string name="zhongzhidingdan">终止订单</string>
    <string name="dingdanwancheng">订单完成结算</string>
    <string name="dingdanxiangqing">订单详情</string>
    <string name="nichen">输入昵称</string>
    <string name="xingming">姓名</string>
    <string name="dianhua">电话</string>
    <string name="shenfenzhenghao">身份证号</string>
    <string name="gongzhong">工种</string>
    <string name="techangaihao">特长爱好</string>
    <string name="benrenshouchishenzheng">本人手持身份证照片</string>
    <string name="jine">金额</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="qingshurushoujihao">\t请输入手机号</string>
    <string name="qingshurumima">\t请输入密码</string>
    <string name="login">登陆</string>
    <string name="wangjimima">忘记密码?</string>
    <string name="regist">还没有账号去注册?</string>
    <string name="register">注册</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="yanzhengma">\t请输入验证码</string>
    <string name="shezhizhanghaomima">\t数字+字母六位以上组合密码</string>
    <string name="querenmima">\t确认密码</string>
    <string name="wotongyui">我同意并已阅读</string>
    <string name="wodeyue">我的余额</string>
    <string name="wodeyinhangka">我的银行卡</string>
    <string name="lookingworker">找工人</string>
    <string name="fasongyanzhengma">发送验证码</string>
    <string name="weizhicuowu">未知错误</string>
    <string name="jiexichucuo">解析出错</string>
    <string name="lianjiechaoshi">链接超时</string>
    <string name="wuwangluolianjie">无网络连接</string>
    <string name="shuruchengshi">输入城市</string>
    <string name="xuanzechengshi">选择城市</string>
    <string name="kaishishijian">开始时间</string>
    <string name="jieshushijian">结束时间</string>
    <string name="qingshuruzongjia">请输入总价</string>
    <string name="xuanzedizhi">选择地址</string>
    <string name="shurudiming">输入位置</string>
    <string name="qingxuanzenazuochengshi">请选择是哪做城市呢？</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">上次更新:刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="qingxuanzegonzhong">请选择工种</string>
    <string name="qingxuanzefengge">请选择风格/额外服务</string>
    <string name="app_name_tixingnin">艺科提醒您：</string>
    <string name="rongim_incorrect">亲，不好意思，给您带来的不便我们深感抱歉，您的通讯系统验证失败，您需要重新登陆验证信息，目前您可能无法正常聊天........</string>
    <string name="over">取消</string>
    <string name="touxiang">头像</string>
    <string name="shuruxingming">输入姓名</string>
    <string name="shurudianhua">输入电话</string>
    <string name="tuku">图库选择</string>
    <string name="paizhao">拍照</string>
    <string name="qingxuanzefangshi">请选择方式</string>
    <string name="xuanzegongzhong">选择工种</string>
    <string name="yikekefudianjiboda">艺科客服-点击拨打电话</string>
    <string name="qingshurunindejianyi">请输入您的建议</string>
    <string name="shanglajiazaigengduo">上拉加载更多...</string>
    <string name="shifangshuaxin">释放加载...</string>
    <string name="shuaxinwancheng">加载完成...</string>
    <string name="tianjiaxinka">添加新卡</string>
    <string name="mybank">我的银行卡</string>
    <string name="quanbudingdan">全部订单</string>
    <string name="weiwandingdan">为完订单</string>
    <string name="yiwandingdan">已完订单</string>
    <string name="overdingdan">取消订单</string>
    <string name="qingshuruneieroing">请输入内容</string>
    <string name="fabuganxiang">发布感想</string>
    <string name="xiangce">相册选择</string>

</resources>
