<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_order_management"
        android:title="@string/ordermanagement" />
    <item
        android:id="@+id/navigation_wodedingdan"
        android:icon="@drawable/ic_myorder"
        android:title="@string/wodedingdan" />

    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/ic_msg_checked"
        android:title="@string/msg" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_my"
        android:title="@string/my" />

</menu>
