<?xml version="1.0" encoding="utf-8"?>
<com.yunyou.yike.ui_view.MyStateLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_staslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backbitmap"
    app:emptyText="@string/meiyourenheshuju"
    app:errorText="@string/jiazaishibai"
    app:loadingText="@string/jiazaizhong"
    app:loginText="@string/chongxindenglu"
    app:noNetworkText="@string/meiyouwangluo"
    app:timeOutText="@string/chaoshil"
    tools:context="com.yunyou.yike.activity.LoginActivity">

    <com.yunyou.yike.ui_view.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="180px"
            android:visibility="visible"
            tools:visibility="visible"
            >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:src="@mipmap/yikezhuangshi"/>

            <EditText
                android:id="@+id/login_etphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180px"
                android:drawableLeft="@drawable/ic_zhanghu"
                android:hint="@string/qingshurushoujihao"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="20"
                android:minWidth="400px"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="30px"
                />

            <EditText
                android:id="@+id/login_etmima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mima"
                android:hint="@string/qingshurumima"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:minWidth="400px"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="30px"
                />


            <com.yunyou.yike.ui_view.DelayedClickButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/btn_loginp"
                android:minHeight="0dp"
                android:minWidth="400px"
                android:onClick="logIn"
                android:paddingBottom="20px"
                android:paddingTop="20px"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30px"
                />

            <com.yunyou.yike.ui_view.DelayedClickTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50px"
                android:text="@string/wangjimima"
                android:textColor="@color/white"
                android:textSize="28px"/>

            <com.yunyou.yike.ui_view.DelayedClickTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:paddingTop="20px"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="28px"/>
        </LinearLayout>
    </com.yunyou.yike.ui_view.ReboundScrollView>
    <!--<com.eftimoff.androipathview.PathView-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/pathView"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="150dp"-->
    <!--android:layout_gravity="center"-->
    <!--app:pathColor="@color/app_color"-->
    <!--app:pathWidth="5dp"-->
    <!--app:svg="@raw/shengdan"/>-->
</com.yunyou.yike.ui_view.MyStateLayout>
