<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yunyou.yike.activity.JobActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        >

        <ImageView
            android:id="@+id/title_ivback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/pading_20"
            app:srcCompat="@drawable/ic_fanhui_back"/>

        <TextView
            android:id="@+id/title_tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/pading_40"
            tools:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="23px"
            android:paddingRight="@dimen/pading_20"
            android:paddingTop="22px"
            >

            <Switch
                android:id="@+id/job_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/yuan_switch_thumb"
                android:track="@drawable/yuan_switch_c"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:src="@mipmap/shengyin"/>
        </LinearLayout>
    </RelativeLayout>

    <com.fingdo.statelayout.StateLayout
        android:id="@+id/job_looking_statslayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:emptyText="@string/meiyourenheshuju"
        app:errorText="@string/jiazaishibai"
        app:loadingText="@string/jiazaizhong"
        app:loginText="@string/chongxindenglu"
        app:noNetworkText="@string/meiyouwangluo"
        app:timeOutText="@string/chaoshil"
        >

        <com.baoyz.widget.PullRefreshLayout
            android:id="@+id/looking_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshType="material"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/job_recylerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                />
        </com.baoyz.widget.PullRefreshLayout>
    </com.fingdo.statelayout.StateLayout>


</LinearLayout>
