<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@color/white"
                                     android:orientation="vertical"
                                     android:padding="60px">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="40px"
        android:text="@string/qingxuanzefangshi"
        android:textColor="@color/text_color"
        android:textSize="28px"/>

    <com.yunyou.yike.ui_view.DelayedClickButton
        android:id="@+id/dailog_photo_btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_unphoto"
        android:padding="20px"
        android:text="@string/tuku"
        android:textColor="@color/app_color"
        android:textSize="28px"
        />

    <com.yunyou.yike.ui_view.DelayedClickButton
        android:id="@+id/dailog_photo_btnpictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@drawable/btn_unphoto"
        android:padding="20px"
        android:text="@string/paizhao"
        android:textColor="@color/app_color"
        android:textSize="28px"
        />


</com.zhy.autolayout.AutoLinearLayout>