<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="30px"
              android:background="@color/background"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        android:background="@color/app_color"
        android:gravity="center"
        android:padding="20px"
        android:text="@string/tousujianyi"
        android:textColor="@color/white"
        android:textSize="28px"/>

    <EditText
        android:id="@+id/dialog_edittousu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/qingshurunindejianyi"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:minHeight="200px"
        android:padding="20px"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_alp"
        android:textSize="28px"/>


    <com.yunyou.yike.ui_view.DelayedClickButton
        android:id="@+id/dialog_tousu_tvbada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="40px"
        android:padding="20px"
        android:text="@string/ok"
        android:textColor="@color/text_color"
        android:textSize="28px"/>

</LinearLayout>